added all task dependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@antv/g2plot": "^2.4.33",
+    "@prizm-ui/core": "^5.9.0",
+    "@prizm-ui/theme": "^5.9.0",
     "echarts": "^6.0.0",
     "ngx-echarts": "^18.0.0",
     "rxjs": "~7.8.0",
